# nngine

./: .gitignore  Dockerfile  FnEnvoy.py  README.md  __init__.py  docker-compose.yml  envoy.py  pyproject.toml  ray_config.yml  requirements.txt  setup.py  start.sh  test.ipynb  util.py
alterations/: Editor.py  FnEdit.py  __init__.py  alter.py  get_attr_map.py  gpt2.py
alterations/gpt2/: __init__.py  interventions.py  model.py
app/: app_start.sh  main.py  model.py
app/src/: core  main.py
compile/schema/: nodes.py
compose/: Dockerfile  docker-compose.yml
core/: __init__.py  fake_tensor.ipynb  nnsight.ipynb
core/compile/: __init__.py  compile.py  graph.py  precompile.py  utils.py
core/model/: EleutherAI_gpt-j-6b.json  Qwen_Qwen2.5-0.5B-Instruct.json  load.py  openai-community_gpt2.json
core/schema/: __init__.py  request.py
local/: server.py  server_old.py
models/: NNgine.py
ray/: ray_config.yml  ray_start.sh
ray/src/: head.py
services/: head.py  model.py
temp/: meta-llama_Llama-3.1-8B.json  pytree.py
toolbox/: __init__.py
toolbox/eap/: eap.py  fixing.ipynb  new_eap.py  test.ipynb  test_eap.ipynb
