[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]

[project]
dynamic = ["version"]
name = "nngine"
authors = [
  { name="Caden", email="kh4dien@gmail.com" },
]
description = "Package for interpreting and manipulating the internals of deep learning models."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "nnsight",
    "einops",
    ]
[project.urls]
"Homepage" = "https://baulab.info"


